--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -6,7 +6,8 @@
     "outDir": "lib",
     "skipLibCheck": true,
     "declaration": true,
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "jsx": "preserve"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["**/tysts.ts", "**/tests.ts"]
