--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "minimatch": "^10.0.1",
     "picocolors": "^1.0.0",
     "playwright": "^1.49.0",
+    "prettier": "^3.4.2",
     "react": "^18.3.1",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8",
