--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "@babel/preset-typescript": "^7.24.1",
     "@parcel/watcher": "^2.4.1",
     "@swc/core": "^1.4.13",
-    "@types/react": "^18.3.12",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "@vitest/browser": "^2.1.8",
     "babel-plugin-replace-import-extension": "^1.1.4",
     "benny": "^3.7.1",
@@ -82,7 +83,8 @@
     "picocolors": "^1.0.0",
     "playwright": "^1.49.0",
     "prettier": "^3.4.2",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8",
     "vitest-browser-react": "^0.0.4"
