--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "allowImportingTsExtensions": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "exactOptionalPropertyTypes": true,
+    // [TODO] Enable it with Mind Control
+    // "exactOptionalPropertyTypes": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
     "skipLibCheck": true,
