--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "@babel/preset-typescript": "^7.24.1",
     "@parcel/watcher": "^2.4.1",
     "@swc/core": "^1.4.13",
-    "@types/react": "^18.3.14",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "@vitest/browser": "^3.0.3",
     "babel-plugin-replace-import-extension": "^1.1.4",
     "benny": "^3.7.1",
@@ -83,6 +84,7 @@
     "playwright": "^1.49.1",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "typescript": "^5.7.2",
     "vitest": "^3.0.3",
     "vitest-browser-react": "^0.0.4"
