--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["env.d.ts", "tests/**/*.ts", "src/**/*.ts", "src/**/*.tsx"],
   "compilerOptions": {
     "outDir": "lib",
     "target": "ESNext",
