Kill old Nix-based dev env setup

--- a/mise.toml
+++ b/mise.toml
@@ -1,6 +1,6 @@
 [tools]
 # Stack
-node = { version = "latest", postinstall = 'corepack enable' }
+node = { version = "latest", postinstall = "corepack enable" }
 # Tools
 cargo-binstall = "latest"
 "cargo:just" = "latest"
