--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,8 +4,8 @@
   "build": { "dockerfile": "Dockerfile", "context": ".." },
 
   // Put repo to /wrkspc
-  "workspaceMount": "source=${localWorkspaceFolder},target=/wrkspc,type=bind",
-  "workspaceFolder": "/wrkspc",
+  "workspaceMount": "source=${localWorkspaceFolder},target=/wrkspc/${localWorkspaceFolderBasename},type=bind",
+  "workspaceFolder": "/wrkspc/${localWorkspaceFolderBasename}",
 
   "mounts": [
     // Cache .cache for pnpm
@@ -23,7 +23,8 @@
         "nefrob.vscode-just-syntax",
         "docker.docker",
         "esbenp.prettier-vscode",
-        "hverlin.mise-vscode"
+        "hverlin.mise-vscode",
+        "vitest.explorer"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "fish",
@@ -31,7 +32,9 @@
           "fish": {
             "path": "/usr/bin/fish"
           }
-        }
+        },
+        "mise.binPath": "/home/vscode/.local/bin/mise",
+        "vitest.shellType": "terminal"
       }
     }
   }
