--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,8 @@
         "docker.docker",
         "esbenp.prettier-vscode",
         "hverlin.mise-vscode",
-        "vitest.explorer"
+        "vitest.explorer",
+        "tekumara.typos-vscode"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "fish",
