--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "docker.docker",
     "esbenp.prettier-vscode",
     "hverlin.mise-vscode",
-    "vitest.explorer"
+    "vitest.explorer",
+    "tekumara.typos-vscode"
   ]
 }
