--- a/mise.toml
+++ b/mise.toml
@@ -1,9 +1,12 @@
 [tools]
 # Stack
 node = { version = "latest", postinstall = "corepack enable" }
+rust = "latest"
 # Tools
 cargo-binstall = "latest"
 "cargo:just" = "latest"
+"cargo:https://github.com/tekumara/typos-lsp" = "latest"
 
 [settings]
 experimental = true
+cargo.binstall = true
