--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,8 @@
         "esbenp.prettier-vscode",
         "hverlin.mise-vscode",
         "vitest.explorer",
-        "tekumara.typos-vscode"
+        "tekumara.typos-vscode",
+        "davidlday.languagetool-linter"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "fish",
