--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "hverlin.mise-vscode",
     "vitest.explorer",
     "tekumara.typos-vscode",
-    "davidlday.languagetool-linter"
+    "davidlday.languagetool-linter",
+    "tintinweb.vscode-inline-bookmarks"
   ]
 }
