--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "vitest.explorer",
     "tekumara.typos-vscode",
     "davidlday.languagetool-linter",
-    "tintinweb.vscode-inline-bookmarks"
+    "tintinweb.vscode-inline-bookmarks",
+    "dbaeumer.vscode-eslint"
   ]
 }
