--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.24.1",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-typescript": "^7.24.1",
+    "@eslint/js": "^9.28.0",
     "@parcel/watcher": "^2.4.1",
     "@swc/core": "^1.4.13",
     "@types/react": "^19.1.0",
@@ -88,7 +89,11 @@
     "babel-plugin-replace-import-extension": "^1.1.4",
     "benny": "^3.7.1",
     "bytes-iec": "^3.1.1",
+    "eslint": "^9.28.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "glob": "^10.3.12",
+    "globals": "^16.2.0",
     "minimatch": "^10.0.1",
     "picocolors": "^1.0.0",
     "playwright": "^1.49.1",
@@ -96,6 +101,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.1",
     "vitest": "^3.1.4",
     "vitest-browser-react": "^0.0.4"
   },
