Upgrade Vitest, add Vitest UI to as dev dependency

--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "@swc/core": "^1.4.13",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
-    "@vitest/browser": "^3.1.4",
+    "@vitest/browser": "^3.2.2",
+    "@vitest/ui": "^3.2.2",
     "babel-plugin-replace-import-extension": "^1.1.4",
     "benny": "^3.7.1",
     "bytes-iec": "^3.1.1",
@@ -96,14 +97,14 @@
     "globals": "^16.2.0",
     "minimatch": "^10.0.1",
     "picocolors": "^1.0.0",
-    "playwright": "^1.49.1",
+    "playwright": "^1.52.0",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.1",
-    "vitest": "^3.1.4",
-    "vitest-browser-react": "^0.0.4"
+    "vitest": "^3.2.2",
+    "vitest-browser-react": "^0.2.0"
   },
   "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c",
   "dependencies": {
