--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,7 @@
     "tekumara.typos-vscode",
     "davidlday.languagetool-linter",
     "tintinweb.vscode-inline-bookmarks",
-    "dbaeumer.vscode-eslint"
+    "dbaeumer.vscode-eslint",
+    "ms-vscode.makefile-tools"
   ]
 }
