Refresh dev container setup

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,36 +1,12 @@
-FROM mcr.microsoft.com/devcontainers/base:ubuntu
+FROM kossnocorp/dev-node:latest
 
-# User
+# Install mise
+COPY mise.toml /wrkspc/enso/mise.toml
+RUN eval "$(mise activate bash --shims)" \
+  && cd /wrkspc/enso \
+  && mise install
 
-USER vscode
-ENV HOME="/home/vscode"
-
-# Env
-
-ENV DEBIAN_FRONTEND=noninteractive
-ENV PATH="$HOME/.local/bin:$PATH"
-
-# Shell
-
-# Fish
-RUN sudo apt-get update \
-        && sudo apt-get install -y fish \
-        && mkdir -p "$HOME/.config/fish/completions"
-
-# Starship
-RUN curl -sS https://starship.rs/install.sh | sh -s -- --yes \
-        && echo "starship init fish | source" >> "$HOME/.config/fish/config.fish"
-
-# Stack
-
-# mise-en-place
-RUN curl https://mise.run | sh \
-        && echo "if status is-interactive\n  mise activate fish | source\nelse\n  mise activate fish --shims | source\nend\n" >> ~/.config/fish/config.fish \
-        && PATH="$HOME/.local/bin:$PATH" \
-        && mise use -g usage \
-        && mise completion fish > ~/.config/fish/completions/mise.fish
-
-# Tools
-
-RUN sudo apt-get update \
-        && sudo apt-get install -y neovim
+# Install Playwright
+RUN eval "$(mise activate bash --shims)" \
+  && sudo apt-get update \
+  && npx playwright install --with-deps
