Types revamp foundation

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@eslint/js": "^9.28.0",
     "@parcel/watcher": "^2.4.1",
     "@swc/core": "^1.4.13",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@vitest/browser": "^3.2.2",
@@ -95,6 +96,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "glob": "^10.3.12",
     "globals": "^16.2.0",
+    "happy-dom": "^18.0.1",
     "minimatch": "^10.0.1",
     "picocolors": "^1.0.0",
     "playwright": "^1.52.0",
@@ -106,7 +108,7 @@
     "vitest": "^3.2.2",
     "vitest-browser-react": "^0.2.0"
   },
-  "packageManager": "pnpm@10.12.2+sha512.a32540185b964ee30bb4e979e405adc6af59226b438ee4cc19f9e8773667a66d302f5bfee60a39d3cac69e35e4b96e708a71dd002b7e9359c4112a1722ac323f",
+  "packageManager": "pnpm@10.12.3+sha512.467df2c586056165580ad6dfb54ceaad94c5a30f80893ebdec5a44c5aa73c205ae4a5bb9d5ed6bb84ea7c249ece786642bbb49d06a307df218d03da41c317417",
   "dependencies": {
     "nanoid": "^5.0.9"
   }
