--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "typescript": "^5.8.3",
+    "typescript": "5.9.0-beta",
     "typescript-eslint": "^8.33.1",
     "vitest": "^3.2.2",
     "vitest-browser-react": "^0.2.0"
