--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "typescript": "5.9.0-beta",
+    "typescript": "5.9.2",
     "typescript-eslint": "^8.33.1",
     "tysts": "workspace:^",
     "vitest": "^3.2.2",
