--- a/package.json
+++ b/package.json
@@ -90,7 +90,6 @@
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
-    "@vitest/browser": "^3.2.2",
     "@vitest/ui": "^3.2.2",
     "babel-plugin-replace-import-extension": "^1.1.4",
     "benny": "^3.7.1",
@@ -103,15 +102,13 @@
     "happy-dom": "^18.0.1",
     "minimatch": "^10.0.1",
     "picocolors": "^1.0.0",
-    "playwright": "^1.52.0",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "typescript": "5.9.2",
     "typescript-eslint": "^8.33.1",
     "tysts": "workspace:^",
-    "vitest": "^3.2.2",
-    "vitest-browser-react": "^0.2.0"
+    "vitest": "^3.2.2"
   },
   "packageManager": "pnpm@10.12.3+sha512.467df2c586056165580ad6dfb54ceaad94c5a30f80893ebdec5a44c5aa73c205ae4a5bb9d5ed6bb84ea7c249ece786642bbb49d06a307df218d03da41c317417"
 }
