--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "enso",
-  "version": "1.0.0",
-  "description": "Atoms-like form state managment library",
+  "version": "2.0.0",
+  "description": "Atoms-like form state management library",
   "type": "module",
   "main": "index.cjs",
   "module": "index.js",
