--- a/package.json
+++ b/package.json
@@ -104,11 +104,11 @@
     "prettier": "^3.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tdollar": "workspace:^",
+    "tdollar": "workspace:*",
     "tsx": "^4.20.5",
     "typescript": "5.9.2",
     "typescript-eslint": "^8.33.1",
-    "tysts": "workspace:^",
+    "tysts": "workspace:*",
     "vitest": "^3.2.2"
   },
   "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
