--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -6,9 +6,11 @@
     "outDir": "lib",
     "skipLibCheck": true,
     "declaration": true,
+    "composite": false,
+    "incremental": false,
     "emitDeclarationOnly": true,
     "jsx": "preserve"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["**/tysts.ts", "**/tests.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["**/tysts.ts", "**/tests.ts", "**/tests.tsx"]
 }
