--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
   },
   "homepage": "https://github.com/kossnocorp/enso#readme",
   "dependencies": {
-    "react": "^19",
-    "nanoid": "^5.1.5"
+    "nanoid": "^5.1.5",
+    "react": "^19"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.16.2",
@@ -84,11 +84,10 @@
     "picocolors": "^1.0.0",
     "prettier": "^3.5.3",
     "react-dom": "^19.1.1",
-    "tdollar": "workspace:*",
     "tsx": "^4.20.5",
     "typescript": "5.9.2",
     "typescript-eslint": "^8.33.1",
-    "tysts": "workspace:*",
+    "tyst": "1.0.0-alpha.2",
     "vitest": "^3.2.2"
   },
   "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
