Refresh the dev container setup

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,13 @@
 FROM kossnocorp/dev-node:latest
 
-# Install mise
-COPY mise.toml /wrkspc/enso/mise.toml
-RUN eval "$(mise activate bash --shims)" \
-  && cd /wrkspc/enso \
-  && mise install
+# Ensure directories to mount into.
+RUN \
+  mkdir -p "$HOME/.config/fnox" && \
+  mkdir -p "$HOME/.config/mothership" && \
+  mkdir -p "$HOME/.local" && \
+  mkdir -p "$HOME/.cargo" && \
+  mkdir -p "$HOME/.codex"
+
+# Install shfmt
+RUN sudo apt-get update && \
+  sudo apt-get install -y shfmt
