--- a/mise.toml
+++ b/mise.toml
@@ -1,12 +1,14 @@
 [tools]
-# Stack
-node = { version = "latest", postinstall = "corepack enable" }
+## Stack
+node = { version = "latest" }
+pnpm = "latest"
 rust = "latest"
-# Tools
+
+## Tools
 cargo-binstall = "latest"
 "cargo:just" = "latest"
 "cargo:https://github.com/tekumara/typos-lsp" = "latest"
 
 [settings]
+# Enable extra features
 experimental = true
-cargo.binstall = true
