--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "enso",
-  "version": "2.0.4",
-  "description": "Atoms-like form state management library",
+  "version": "2.1.0",
+  "description": "Maximalist state & form management library for React",
   "type": "module",
   "main": "index.cjs",
   "module": "index.js",
