--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enso",
-  "version": "2.6.0",
+  "version": "2.7.0-beta.1",
   "description": "Maximalist state & form management library for React",
   "type": "module",
   "main": "index.cjs",
